--- a/shakelight/pubspec.yaml
+++ b/shakelight/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
     sdk: flutter
   get: ^4.1.4
   get_storage: ^2.0.2
-
+  vibration: ^1.7.4-nullsafety.0
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
