--- a/shakelight/pubspec.yaml
+++ b/shakelight/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   vibration: ^1.7.4-nullsafety.0
   sensors_plus: ^1.2.1
   shake: ^2.0.0
+  torch_light: ^0.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
