--- a/shakelight/pubspec.yaml
+++ b/shakelight/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+13
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -35,6 +35,9 @@ dependencies:
   sensors_plus: ^1.2.1
   shake: ^2.0.0
   torch_light: ^0.4.0
+  package_info_plus: ^1.0.6
+  url_launcher: ^6.0.17
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
