--- a/shakelight/android/app/src/main/AndroidManifest.xml
+++ b/shakelight/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.shakelight">
    <application
-        android:label="shakelight"
+        android:label="Shakelight"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
